--- a/Q-Gate.html
+++ b/Q-Gate.html
@@ -118,7 +118,7 @@
 				We would like to flip the value of this qubit
 				from “off” to “on.”
 				The result will be a
-				a <a href="Q-Qubit.html#.VERTICAL">“Vertical” 
+				<a href="Q-Qubit.html#.VERTICAL">“Vertical” 
 				qubit</a>
 				with the following matrix form:
 			</p>
