--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
 	
 	</head>
 	<body>
-		<main>
-			<h3>Quantum, made easy</h3>
+		<main class="home">
+			<header>
+				<img src="assets/Q-quantum-javascript.svg" title="Quantum JavaScript (Q.js)">
+				<br>
+				<!-- What is Q? -->
+			</header>
+			<!-- <h3>Quantum, made easy</h3> -->
 			<p>
 				Q is a quantum circuit simulator,
 				drag-and-drop circuit editor,
@@ -70,9 +75,7 @@
 				so jump right in and experiment.
 				(Q recently celebrated our one-year anniversary. 
 				You can 
-				<a href="https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619" target="_blank">read all about it here.</a>)
-
-				
+				<a href="https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619" target="_blank">read all about it here.</a>)			
 			</p>
 			<p>
 				Here’s your first quantum circuit—a 
