--- a/resources.html
+++ b/resources.html
@@ -75,7 +75,7 @@
 
 
 			<h4>What is Quantum Computing?</h4>
-			<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank"><img src="assets/references/talia-gershon.jpg"></a>
+			<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank"><img class="hero" src="assets/references/talia-gershon.jpg"></a>
 			<p>
 				<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank">https://youtu.be/OWJCfOvochA</a>
 				<br>
@@ -97,7 +97,7 @@
 
 
 			<h4>The Quantum Computing talk</h4>
-			<a class="call-out" href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank"><img src="assets/references/the-talk.jpg"></a>
+			<a class="call-out" href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank"><img class="hero" src="assets/references/the-talk.jpg"></a>
 			<p>
 				<a class="call-out" href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank">https://www.smbc-comics.com/comic/the-talk-3</a>
 				<br>
@@ -120,7 +120,7 @@
 			<hr>
 			<h3>Quantum communities</h3>
 			<h4>The Quantum Daily</h4>
-			<a class="call-out" href="https://thequantumdaily.com/" target="_blank"><img src="assets/references/the-quantum-daily.png"></a>
+			<a class="call-out" href="https://thequantumdaily.com/" target="_blank"><img class="hero" src="assets/references/the-quantum-daily.png"></a>
 			<p>
 				<a class="call-out" href="https://thequantumdaily.com/" target="_blank">https://thequantumdaily.com</a><br>
 				The Quantum Daily (TQD) is the 
@@ -145,7 +145,7 @@
 				“Quantum computing for computer scientists”
 				lecture for Microsoft Research (2018)
 			</h4>
-			<img src="assets/references/andrew-helwer.jpg">
+			<img class="hero" src="assets/references/andrew-helwer.jpg">
 			<p>
 				<a class="call-out" href="https://youtu.be/F_Riqjdh2oM" target="_blank">https://youtu.be/F_Riqjdh2oM</a>
 				<br>
@@ -170,7 +170,7 @@
 				Mirco Mannucci’s
 				“Quantum Computing for Computer Scientists” (2008)
 			</h4>
-			<img src="assets/references/quantum-computing-for-computer-scientists.jpg">
+			<img class="hero" src="assets/references/quantum-computing-for-computer-scientists.jpg">
 			<p>
 				<!--
 				<a class="call-out" target="https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf" target="_blank">https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf</a> (This linked PDF includes the table of contents and preface only.)
@@ -195,7 +195,7 @@
 				Isaac Chuang’s
 				“Quantum computation and quantum information” (2000, 2010)
 			</h4>
-			<img src="assets/references/quantum-computing-and-quantum-information.jpg">
+			<img class="hero" src="assets/references/quantum-computing-and-quantum-information.jpg">
 			<p>
 				<a class="call-out" href="http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf" target="_blank">http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf</a>
 				<br>
@@ -271,7 +271,7 @@
 			<hr>
 			<h3 id="Quantum_JavaScript_Qjs">Quantum JavaScript (Q.js)</h3>
 			<h4>Q turns 1 (Medium)</h4>
-			<img src="assets/references/quantum-javascript-medium.jpg">
+			<img class="hero" src="assets/references/quantum-javascript-medium.jpg">
 			<p>
 				<a class="call-out" href="https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619" target="_blank">https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619</a><br>
 				A post written on the occasion of Q’s first birthday.
