Emphasis on concept primers.

--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Q ⟩ References</title>
+		<title>Q ⟩ Learning Resources</title>
 		<meta charset="utf-8">
 		<meta name="viewport"             content="width=device-width,initial-scale=1.0">
 		<meta name="description"          content="Quantum computing in your browser.">
@@ -26,12 +26,12 @@
 		<meta name="twitter:card"         content="summary_large_image">
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
-		<meta name="twitter:title"        content="Q ⟩ References">
+		<meta name="twitter:title"        content="Q ⟩ Learning Resources">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
 		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/Q-website-preview.jpg">
 		
 		<meta property="og:type"          content="website">
-		<meta property="og:title"         content="Q ⟩ References">
+		<meta property="og:title"         content="Q ⟩ Learning Resources">
 		<meta property="og:description"   content="Quantum computing in your browser.">
 		<meta property="og:image"         content="https://quantumjavascript.app/assets/Q-website-preview.jpg">
 		<meta property="og:url"           content="https://quantumjavascript.app/references.html">
@@ -61,8 +61,6 @@
 		<main>
 
 
-
-
 			<h3>Gentle introductions</h3>
 			<p>
 				You’ve heard the term 
@@ -74,7 +72,9 @@
 			</p>
 
 
-			<h4>What is Quantum Computing?</h4>
+
+
+			<h4>What is a quantum computer?</h4>
 			<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank"><img class="hero" src="assets/references/talia-gershon.jpg"></a>
 			<p>
 				<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank">https://youtu.be/OWJCfOvochA</a>
@@ -94,6 +94,47 @@
 				<a href="https://www.linkedin.com/in/talia-gershon/" target="_blank">Dr. Talia Gershon on LinkedIn</a><br>
 				<a href="https://twitter.com/DrTaliaGershon" target="_blank">Dr. Talia Gershon on Twitter</a>
 			</p>
+
+
+
+			<h4>Quantum concepts, the easy way</h4>
+			<p>
+				You don’t need a 
+				<a href="https://en.wikipedia.org/wiki/Doctor_of_Philosophy" target="_blank">PhD</a>
+				in quantum physics to play with quantum computing.
+				After all, this computer you’re reading from doesn’t understand quantum physics.
+				Instead, it merely plugs together a few basic concepts
+				in order to simulate quantum computation.
+				Each of the following documentation pages 
+				focus on one of the conceptual building blocks
+				used to create Q.js.
+				Taken together (and in this order) 
+				they’ll teach you everything you need to know 
+				to get started.
+				Haven’t done math like this since high school?
+				That’s ok.
+				These are gentle refreshers.
+			</p>
+			<br>
+			<ol>
+				<li><a href="Q-ComplexNumbers.html">Complex numbers</a>.</li>
+				<li><a href="Q-Matrix.html">Matrices</a>.</li>
+				<li><a href="Q-Qubit.html">Quantum bits (qubits)</a>.</li>
+				<li><a href="Q-Gate.html">Quantum logic gates</a>.</li>
+				<li><a href="Q-Circuit.html">Quantum circuits</a>.</li>
+			</ol>
+			<br>
+			<p>
+				Since the above pages also serve as documentation for the Q.js code API
+				you may notice some code examples sprinkled into these primers for added clarity.
+				Code not your thing? That’s ok too. 
+				It won’t hinder you to skip over those bits.				
+				For each page the concept primers end
+				and the API documentation begins 
+				with the heading titled <strong>Constructor</strong>.
+				(From there onwards it’s all about the code.)
+			</p>
+
 
 
 			<h4>The Quantum Computing talk</h4>
