Fixing up hyperlinks.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
 	<body>
 		<main class="home">
 			<header>
-				<img src="assets/Q-quantum-javascript.svg" title="Quantum JavaScript (Q.js)">
-				<br>
-				<!-- What is Q? -->
+				<img 
+					src="assets/Q-quantum-javascript.svg"
+					title="Quantum JavaScript (Q.js)"
+					  alt="Quantum JavaScript (Q.js)">
 			</header>
 			<!-- <h3>Quantum, made easy</h3> -->
 			<p>
@@ -74,8 +75,12 @@
 				There’s nothing to install and nothing to configure, 
 				so jump right in and experiment.
 				(Q recently celebrated our one-year anniversary. 
-				You can 
-				<a href="https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619" target="_blank">read all about it here.</a>)			
+				You can read the corresponding
+				<a href="https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619" target="_blank">post on Medium</a>,
+				the 
+				<a href="https://news.ycombinator.com/item?id=23031408" target="_blank">discussion on Hacker News</a>,
+				and the 
+				<a href="https://www.reddit.com/r/QuantumComputing/comments/garfdd/quantum_javascript/" target="_blank">thread on Reddit</a>.)
 			</p>
 			<p>
 				Here’s your first quantum circuit—a 
