--- a/resources.html
+++ b/resources.html
@@ -117,7 +117,7 @@
 			</p>
 			<br>
 			<ol>
-				<li><a href="Q-ComplexNumbers.html">Complex numbers</a>.</li>
+				<li><a href="Q-ComplexNumber.html">Complex numbers</a>.</li>
 				<li><a href="Q-Matrix.html">Matrices</a>.</li>
 				<li><a href="Q-Qubit.html">Quantum bits (qubits)</a>.</li>
 				<li><a href="Q-Gate.html">Quantum logic gates</a>.</li>
