Small Qubit and Gate docs updates.

--- a/Q-Qubit.html
+++ b/Q-Qubit.html
@@ -977,7 +977,51 @@
 					<tr class="dividend"><td>1</td></tr>
 					<tr class="divisor"><td>√ 2</td></tr>
 				</table>
+				=
+				<div class="matrix qubit">
+					<div class="matrix-bracket-left"></div>
+					<div class="matrix-bracket-right"></div>
+					<table>
+						<tr><td><strong>1 ÷ √ 2</strong></td></tr>
+						<tr><td><strong>1 ÷ √ 2</strong></td></tr>
+					</table>
+				</div>
+				<br>
+				<br>
+				<table class="equation">
+					<tr>
+						<td>
+							<code><a href="#this.alpha">alpha</a></code><sup>2</sup> + <code><a href="#this.beta">beta</a></code><sup>2</sup>
+						</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>
+							(<strong>1 ÷ √ 2</strong>)<sup>2</sup> + (<strong>1 ÷ √ 2</strong>)<sup>2</sup>
+						</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>
+							(<strong>1 ÷ 2</strong>) + (<strong>1 ÷ 2</strong>)
+						</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>
+							<strong>0.5</strong> + <strong>0.5</strong>
+						</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>
+							<strong>1</strong>
+						</td>
+						<td>1 ✓</td>
+					</tr>
+				</table>
 			</div>
+			<br>
 			<br>
 			<p>
 				And finally, an
@@ -1010,6 +1054,49 @@
 				<table class="division">
 					<tr class="dividend"><td>1</td></tr>
 					<tr class="divisor"><td>√ 2</td></tr>
+				</table>
+				=
+				<div class="matrix qubit">
+					<div class="matrix-bracket-left"></div>
+					<div class="matrix-bracket-right"></div>
+					<table>
+						<tr><td class="right"><strong>1 ÷ √ 2</strong></td></tr>
+						<tr><td class="right"><strong>-1 ÷ √ 2</strong></td></tr>
+					</table>
+				</div>
+				<br>
+				<br>
+				<table class="equation">
+					<tr>
+						<td>
+							<code><a href="#this.alpha">alpha</a></code><sup>2</sup> + <code><a href="#this.beta">beta</a></code><sup>2</sup>
+						</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>
+							(<strong>1 ÷ √ 2</strong>)<sup>2</sup> + (<strong>-1 ÷ √ 2</strong>)<sup>2</sup>
+						</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>
+							(<strong>1 ÷ 2</strong>) + (<strong>1 ÷ 2</strong>)
+						</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>
+							<strong>0.5</strong> + <strong>0.5</strong>
+						</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>
+							<strong>1</strong>
+						</td>
+						<td>1 ✓</td>
+					</tr>
 				</table>
 			</div>
 			<br>
